--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
   "bugs": {
     "url": "https://github.com/alexsasharegan/vue-layout/issues"
   },
-  "homepage": "https://github.com/alexsasharegan/vue-layout#readme"
+  "homepage": "https://github.com/alexsasharegan/vue-layout#readme",
+  "devDependencies": {
+    "typescript": "^2.7.1",
+    "vue": "^2.5.13"
+  }
 }
