--- a/package.json
+++ b/package.json
@@ -1,28 +1,41 @@
 {
-  "name": "vue-layout",
-  "version": "1.0.0",
-  "description": "A set of layout components for Vue.js",
-  "main": "lib/index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/alexsasharegan/vue-layout.git"
-  },
-  "keywords": [
-    "vue",
-    "vuejs",
-    "layout"
-  ],
-  "author": "Alex Regan",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/alexsasharegan/vue-layout/issues"
-  },
-  "homepage": "https://github.com/alexsasharegan/vue-layout#readme",
-  "devDependencies": {
-    "typescript": "^2.7.1",
-    "vue": "^2.5.13"
-  }
+	"name": "vue-layout",
+	"version": "1.0.0",
+	"description": "A set of layout components for Vue.js",
+	"main": "lib/index.js",
+	"scripts": {
+		"clean": "rm -Rf lib",
+		"predev": "npm run clean",
+		"dev": "cross-env NODE_ENV=development webpack",
+		"prebuild": "npm run clean",
+    "build": "cross-env NODE_ENV=production webpack",
+    "prepublishOnly": "npm run build",
+    "release": "standard-version",
+    "postrelease": "git push --follow-tags origin master && npm publish",
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/alexsasharegan/vue-layout.git"
+	},
+	"keywords": [
+		"vue",
+		"vuejs",
+		"layout"
+	],
+	"author": "Alex Regan",
+	"license": "MIT",
+	"bugs": {
+		"url": "https://github.com/alexsasharegan/vue-layout/issues"
+	},
+	"homepage": "https://github.com/alexsasharegan/vue-layout#readme",
+	"devDependencies": {
+		"babel-minify-webpack-plugin": "^0.2.0",
+		"cross-env": "^5.1.3",
+		"standard-version": "^4.3.0",
+		"ts-loader": "^3.4.0",
+		"typescript": "^2.7.1",
+		"vue": "^2.5.13",
+		"webpack": "^3.10.0"
+	}
 }
