--- a/package.json
+++ b/package.json
@@ -3,26 +3,26 @@
 	"version": "1.0.0",
 	"description": "A set of layout components for Vue.js",
 	"main": "lib/index.js",
+	"files": ["lib", "LICENSE", "README.md"],
 	"scripts": {
 		"clean": "rm -Rf lib",
 		"predev": "npm run clean",
 		"dev": "cross-env NODE_ENV=development webpack",
 		"prebuild": "npm run clean",
-    "build": "cross-env NODE_ENV=production webpack",
-    "prepublishOnly": "npm run build",
-    "release": "standard-version",
-    "postrelease": "git push --follow-tags origin master && npm publish",
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"build": "cross-env NODE_ENV=production webpack",
+		"prepublishOnly": "npm run build",
+		"release": "standard-version",
+		"postrelease": "git push --follow-tags origin master && npm publish",
+		"test:quick": "jest",
+		"test:verbose": "jest --verbose",
+		"test:coverage": "jest --coverage --verbose",
+		"test": "npm run test:verbose"
 	},
 	"repository": {
 		"type": "git",
 		"url": "git+https://github.com/alexsasharegan/vue-layout.git"
 	},
-	"keywords": [
-		"vue",
-		"vuejs",
-		"layout"
-	],
+	"keywords": ["vue", "vuejs", "layout"],
 	"author": "Alex Regan",
 	"license": "MIT",
 	"bugs": {
@@ -30,12 +30,27 @@
 	},
 	"homepage": "https://github.com/alexsasharegan/vue-layout#readme",
 	"devDependencies": {
+		"@types/jest": "^22.1.1",
 		"babel-minify-webpack-plugin": "^0.2.0",
 		"cross-env": "^5.1.3",
+		"jest": "^22.1.4",
 		"standard-version": "^4.3.0",
+		"ts-jest": "^22.0.3",
 		"ts-loader": "^3.4.0",
 		"typescript": "^2.7.1",
 		"vue": "^2.5.13",
 		"webpack": "^3.10.0"
+	},
+	"jest": {
+		"moduleFileExtensions": ["ts", "js"],
+		"transform": {
+			"\\.(ts|tsx)$": "<rootDir>/node_modules/ts-jest/preprocessor.js"
+		},
+		"testMatch": [
+			"**/__tests__/?(*.)(spec|test).(ts|js)",
+			"**/?(*.)(spec|test).(js|ts)"
+		],
+		"collectCoverageFrom": ["src/**/*.{js,ts}", "!src/**/*.d.ts"],
+		"mapCoverage": true
 	}
 }
