--- a/package.json
+++ b/package.json
@@ -1,74 +1,75 @@
 {
-  "name": "vue-breakpoint",
-  "version": "1.1.0",
-  "description": "A set of layout components for Vue.js",
-  "main": "lib/index.js",
-  "files": [
-    "lib",
-    "LICENSE",
-    "README.md"
-  ],
-  "scripts": {
-    "clean": "rm -Rf lib",
-    "predev": "npm run clean",
-    "dev": "cross-env NODE_ENV=development webpack",
-    "prebuild": "npm run clean",
-    "build": "cross-env NODE_ENV=production webpack",
-    "prepublishOnly": "npm run build",
-    "release": "standard-version",
-    "postrelease": "git push --follow-tags origin master && npm publish",
-    "test:quick": "jest",
-    "test:verbose": "jest --verbose",
-    "test:coverage": "jest --coverage --verbose",
-    "test": "npm run test:verbose"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/alexsasharegan/vue-layout.git"
-  },
-  "keywords": [
-    "vue",
-    "vuejs",
-    "layout"
-  ],
-  "author": "Alex Regan",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/alexsasharegan/vue-layout/issues"
-  },
-  "homepage": "https://github.com/alexsasharegan/vue-layout#readme",
-  "devDependencies": {
-    "@types/jest": "^22.1.1",
-    "babel-minify-webpack-plugin": "^0.2.0",
-    "cross-env": "^5.1.3",
-    "jest": "^22.1.4",
-    "standard-version": "^4.3.0",
-    "ts-jest": "^22.0.3",
-    "ts-loader": "^3.4.0",
-    "typescript": "^2.7.1",
-    "vue": "^2.5.13",
-    "webpack": "^3.10.0"
-  },
-  "jest": {
-    "moduleFileExtensions": [
-      "ts",
-      "js"
-    ],
-    "transform": {
-      "\\.(ts|tsx)$": "<rootDir>/node_modules/ts-jest/preprocessor.js"
-    },
-    "testMatch": [
-      "**/__tests__/?(*.)(spec|test).(ts|js)",
-      "**/?(*.)(spec|test).(js|ts)"
-    ],
-    "collectCoverageFrom": [
-      "src/**/*.{js,ts}",
-      "!src/**/*.d.ts"
-    ],
-    "mapCoverage": true
-  },
-  "dependencies": {
-    "vue-class-component": "^6.1.2",
-    "vue-property-decorator": "^6.0.0"
-  }
+	"name": "vue-breakpoint",
+	"version": "1.1.0",
+	"description": "A set of layout components for Vue.js",
+	"main": "dist/index.js",
+	"module": "dist/index.esm.js",
+	"types": "lib/src/",
+	"files": [
+		"dist",
+		"lib",
+		"LICENSE",
+		"README.md"
+	],
+	"scripts": {
+		"clean": "rm -Rf lib dist",
+		"pretsc": "npm run clean",
+		"tsc": "tsc",
+		"prebuild": "npm run tsc",
+		"build": "rollup -c ./rollup.config.js",
+		"prepublishOnly": "npm run build",
+		"release": "standard-version",
+		"postrelease": "git push --follow-tags origin master && npm publish",
+		"test:quick": "jest",
+		"test:verbose": "jest --verbose",
+		"test:coverage": "jest --coverage --verbose",
+		"test": "npm run test:verbose"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/alexsasharegan/vue-layout.git"
+	},
+	"keywords": [
+		"vue",
+		"vuejs",
+		"layout"
+	],
+	"author": "Alex Regan",
+	"license": "MIT",
+	"bugs": {
+		"url": "https://github.com/alexsasharegan/vue-layout/issues"
+	},
+	"homepage": "https://github.com/alexsasharegan/vue-layout#readme",
+	"peerDependencies": {
+		"vue": ">=2.5.0"
+	},
+	"devDependencies": {
+		"@types/jest": "^22.1.1",
+		"cross-env": "^5.1.3",
+		"jest": "^22.1.4",
+		"rollup": "^0.55.3",
+		"standard-version": "^4.3.0",
+		"ts-jest": "^22.0.3",
+		"typescript": "^2.7.1",
+		"vue": "^2.5.13"
+	},
+	"jest": {
+		"moduleFileExtensions": [
+			"ts",
+			"js"
+		],
+		"transform": {
+			"\\.(ts|tsx)$": "<rootDir>/node_modules/ts-jest/preprocessor.js"
+		},
+		"testMatch": [
+			"**/__tests__/?(*.)(spec|test).(ts|js)",
+			"**/?(*.)(spec|test).(js|ts)"
+		],
+		"collectCoverageFrom": [
+			"src/**/*.{js,ts}",
+			"!src/**/*.d.ts"
+		],
+		"mapCoverage": true
+	},
+	"dependencies": {}
 }
