--- a/.prettierrc
+++ b/.prettierrc
@@ -1,10 +1,10 @@
 {
-	"bracketSpacing": true,
-	"printWidth": 80,
-	"semi": true,
-	"singleQuote": false,
-	"tabWidth": 2,
-	"trailingComma": "es5",
-	"useTabs": true,
-	"proseWrap": "always"
+  "bracketSpacing": true,
+  "printWidth": 80,
+  "semi": true,
+  "singleQuote": false,
+  "tabWidth": 2,
+  "trailingComma": "es5",
+  "useTabs": false,
+  "proseWrap": "always"
 }
