--- a/package.json
+++ b/package.json
@@ -44,14 +44,14 @@
     "vue": ">=2.5.0"
   },
   "devDependencies": {
-    "@types/jest": "^22.1.1",
-    "cross-env": "^5.1.3",
-    "jest": "^22.1.4",
-    "rollup": "^0.55.3",
-    "standard-version": "^4.3.0",
-    "ts-jest": "^22.0.3",
-    "typescript": "^2.7.1",
-    "vue": "^2.5.13"
+    "@types/jest": "^23.3.10",
+    "cross-env": "^5.2.0",
+    "jest": "^23.6.0",
+    "rollup": "^0.67.4",
+    "standard-version": "^4.4.0",
+    "ts-jest": "^23.10.5",
+    "typescript": "^3.2.2",
+    "vue": "^2.5.21"
   },
   "jest": {
     "moduleFileExtensions": [
@@ -69,7 +69,7 @@
       "src/**/*.{js,ts}",
       "!src/**/*.d.ts"
     ],
-    "mapCoverage": true
+    "collectCoverage": true
   },
   "dependencies": {}
 }
